# satysfi-fonts-ibm-plex-sans-jp

./: .gitignore  README.md  Satyristes  fonts.satysfi-hash  satysfi-fonts-ibm-plex-sans-jp-doc.opam  satysfi-fonts-ibm-plex-sans-jp.opam
doc/: manual.saty
