opam-version: "2.0"
name: "satysfi-fonts-ibm-plex-sans-jp-doc"
version: "1.0.0"
synopsis: "Docs for SATySFi Font Package for IBM Plex typeface"
description: """
Docs for SATySFi Font Package for IBM Plex typeface
"""
maintainer: "Mogami Shinichi <cmonaqa@gmail.com>"
authors: "Mogami Shinichi <cmonaqa@gmail.com>"
license: "OFL-1.1"
homepage: "https://github.com/monaqa/satysfi-fonts-ibm-plex-sans-jp"
dev-repo: "git+https://github.com/monaqa/satysfi-fonts-ibm-plex-sans-jp.git"
bug-reports: "https://github.com/monaqa/satysfi-fonts-ibm-plex-sans-jp/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-fonts-ibm-plex-sans-jp" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-easytable" {>= "1.1.2" & < "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fonts-ibm-plex-sans-jp-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-ibm-plex-sans-jp-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
